Change background image

--- a/app/Resources/less/custom.less
+++ b/app/Resources/less/custom.less
@@ -125,6 +125,18 @@ body{min-height:1000px;} /* min height so you can always scroll */
 .hero {
   text-align: center;
   position: relative;
+  height: 350px;
+  background: white url(/images/bg.png) top center no-repeat;
+  -webkit-background-size: 100%;
+  -moz-background-size: 100%;
+  background-size: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+
   h1 {
     font-size: floor((@font-size-base * 3));
     margin: 0;
