--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -3,7 +3,7 @@
 {% block bodyAttributes %} data-spy="scroll" data-target="#navbar-collapse"{% endblock %}
 
 {% block content %}
-    <div class="hero" style="height: 350px; background: white url(http://www.edition-open-sources.org/media/Studies/1/15/big2_2_Schemmel_imagesRicci-Schall-Verbiest.jpg) center center no-repeat; -webkit-background-size: 100%; -moz-background-size: 100%; background-size: 100%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; -webkit-background-size: cover; -moz-background-size: cover; background-size: cover;">
+    <div class="hero">
         <h1>Jesuit Science Network</h1>
     </div>
     <div class="container container-narrow">
