--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -69,40 +69,40 @@
         </p>
 
         <dl class="dl-horizontal">
-            <dt>&quot;pure&quot; mathematics</dt>
+            <dt>Pure mathematics</dt>
             <dd>algebra, functions, series; analytical geometry; arithmetic; integral calculus
                 and analysis; geometry; logarithms; number theory, probablitites, etc.</dd>
 
-            <dt>&quot;applied&quot; mathematics</dt>
+            <dt>Mixed mathematics</dt>
             <dd>mechanics; optics (catoptrics, dioptrics); acoustics (harmonies, theory of
-                music and sound); hydraulics, civil and military architecture; \enquote{mathematical geography}
+                music and sound); hydraulics, civil and military architecture; mathematical geography
                 (localization, cartography); scientific instruments, physics cabinet</dd>
 
-            <dt>astronomy</dt>
+            <dt>Astronomy</dt>
             <dd>
                 calendars, almanachs, ephemerides; clocks (dials, horology); spherical astronomy; lunar and
                 solar astronomy (observation and theory); comets (observation and theory); stellar astronomy (observation);
                 planetary astronomy (theory)
             </dd>
 
-            <dt>natural philosophy</dt>
+            <dt>Natural philosophy</dt>
             <dd>
                 commentaries of Aristotle; natural philosophy; philosophy of experience; supernatural
                 and occult questions
             </dd>
 
-            <dt>natural history</dt>
+            <dt>Natural history</dt>
             <dd>
-                cosmography; physical, \enquote{subterranean}, and politcal geography; hydrography;
+                cosmography; physical, subterranean, and politcal geography; hydrography;
                 meteorology (observation, instruments); zoology and botany; cabinets of curiosities, collections
             </dd>
 
-            <dt>medicine</dt>
+            <dt>Medicine</dt>
             <dd>
                 health and disease; anatomy, physiology, surgery; experimental medicine
             </dd>
 
-            <dt>agriculture and economics</dt>
+            <dt>Agriculture and economics</dt>
             <dd>
                 woods and horticulture; beekeeping; money, measure and weight
             </dd>
