--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -78,10 +78,10 @@
                     </p>
                     <p>
                         The main database behind the JSN along with its
-                        editing tools are powered by the <a href="http://pdr.bbaw.de/english">Person Data Repository</a> project at the <a href="http://www.bbaw.de/en/">BBAW</a>.
+                        editing tools are powered by the <a href="http://pdr.bbaw.de/english">Person Data Repository</a> project at the <a href="http://www.bbaw.de/en/">Berlin-Brandenburg Academy of Sciences and Humanities</a>.
                     </p>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4 text-right">
                     <h4>Project manager</h4>
 
                     <p>
@@ -98,14 +98,14 @@
                     </p>
                 </div>
                 <div class="col-sm-4">
-                    <h4>Contact</h4>
+                    <h4>Contact address</h4>
 
                     <p>
-                        <em>Wuppertal University</em><br>
                         IZWT<br>
-                        Bergische Universität Wuppertal<br>
+                        Wuppertal University<br>
                         Gaußstraße 20<br>
-                        42119 Wuppertal
+                        42119 Wuppertal<br>
+                        Germany
                     </p>
 
                 </div>
