--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -27,7 +27,8 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Browse <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li class="dropdown-header">Lists</li>
-                            <li><a href="{{ path('list') }}">Persons</a></li>
+                            <li><a href="{{ path('list') }}">Jesuits</a></li>
+                            <li><a href="{{ path('list_nonjesuits') }}">Non-Jesuits</a></li>
                             <li><a href="{{ path('subjects') }}">Subjects</a></li>
                             {#<li><a href="#">Something else here</a></li>#}
                             <li role="separator" class="divider"></li>
