--- a/app/Resources/less/custom.less
+++ b/app/Resources/less/custom.less
@@ -680,3 +680,9 @@ p.viaf-notice {
   display: block;
   visibility: hidden;
 }
+
+
+
+li.list-separator {
+  border-bottom: 1px solid @gray-lighter;
+}
