Fix footer logos

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -61,10 +61,10 @@
         <div class="container logos">
             <div class="col-sm-12">
                 <ul class="list-inline">
-                    <li><a href="#"><img src="{{ asset('images/logos/buw.png') }}" height="30"/></a></li>
-                    <li><a href="#"><img src="{{ asset('images/logos/izwt.png') }}" height="30"/></a></li>
-                    <li><a href="#"><img src="{{ asset('images/logos/dfg.png') }}" height="30"/></a></li>
-                    <li><a href="#"><img src="{{ asset('images/logos/bbaw.png') }}" height="30"/></a></li>
+                    <li><a href="http://www.dfg.de/en/"><img src="{{ asset('images/logos/dfg.png') }}" height="30"/></a></li>
+                    <li><a href="http://www.bbaw.de/en/"><img src="{{ asset('images/logos/bbaw.png') }}" height="60"/></a></li>
+                    <li><a href="http://www.uni-wuppertal.de/en/home.html"><img src="{{ asset('images/logos/buw.png') }}" height="30"/></a></li>
+                    <li><a href="http://www.izwt.uni-wuppertal.de/en/homepage.html"><img src="{{ asset('images/logos/izwt.png') }}" height="30"/></a></li>
                 </ul>
             </div>
         </div>
