Include Bootstrap-select

--- a/app/Resources/less/bootstrap.less
+++ b/app/Resources/less/bootstrap.less
@@ -60,5 +60,7 @@
 @import "../../../vendor/twbs/bootstrap/less/utilities.less";
 @import "../../../vendor/twbs/bootstrap/less/responsive-utilities.less";
 
+@import "../vendor/bootstrap-select/less/bootstrap-select.less";
+
 @import "custom.less";
 
