--- a/app/Resources/views/default/search.html.twig
+++ b/app/Resources/views/default/search.html.twig
@@ -59,7 +59,7 @@
 
         <h4>What</h4>
         {{ form_row(form.subject) }}
-        {{ form_row(form.position) }}
+        {{ form_row(form.occupation) }}
         {{ form_row(form.membership) }}
 
         <div class="row"  style="margin-top: 50px;">
