--- a/app/Resources/views/default/list.html.twig
+++ b/app/Resources/views/default/list.html.twig
@@ -21,7 +21,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container container-narrow alph-list">
+    <div class="container container-narrow alph-list fixed">
         <div class="col-xs-12" id="letter-list">
             <header>
                 <small class="pull-right text-muted" style="margin-top: 20px; line-height: 28px;"><em>
