--- a/app/Resources/views/default/subjects.html.twig
+++ b/app/Resources/views/default/subjects.html.twig
@@ -1,5 +1,6 @@
 {% extends "layout.html.twig" %}
 
+{% if scheme is not defined %}
 {% block bodyAttributes %} data-spy="scroll" data-target="#letter-list"{% endblock %}
 
 {% block stylesheets %}
@@ -10,14 +11,26 @@
         }
     </style>
 {% endblock %}
+{% endif %}
 
 {% block content %}
-    <div class="container container-narrow alph-list">
-        <div class="col-xs-12" id="letter-list">
+    <div class="container container-narrow alph-list{% if scheme is not defined %} fixed{% endif %}">
+        <div class="col-xs-12">
             <header>
+                <ul class="pull-right nav nav-pills group-nav">
+                    <li{% if scheme is not defined %} class="active"{% endif %}><a href="{{ path('subjects') }}">alphabetical</a></li>
+                    <li{% if scheme is defined and scheme == 'harris' %} class="active"{% endif %}><a href="{{ path('subjects_grouped', {scheme: 'harris'}) }}">contemporary grouping</a></li>
+                    <li{% if scheme is defined and scheme == 'modern' %} class="active"{% endif %}><a href="{{ path('subjects_grouped', {scheme: 'modern'}) }}">modern grouping</a></li>
+                </ul>
                 <h2>
-                    <span class="text-muted">{{ fullCount }}</span> subjects
+                    {% if groupCount is defined and groupCount %}
+                        <span class="text-muted">{{ groupCount }}</span> groups
+                    {% else %}
+                        <span class="text-muted">{{ fullCount }}</span> subjects
+                    {% endif %}
                 </h2>
+                {% if scheme is not defined %}
+                <div id="letter-list">
                 <ul class="nav nav-pills letter-list">
                     {% for letter in range('A', 'Z') %}
                         {% if letters[letter] is defined %}
@@ -27,7 +40,12 @@
                         {% endif %}
                     {% endfor %}
                 </ul>
+                </div>
+                {% endif %}
             </header>
+            {% if groupCount is defined %}
+            <p class="total-count"><em>{{ fullCount }} subjects total</em></p>
+            {% endif %}
             <div>
                 {% for letter, entries in letters %}
                     <h4 class="jumptarget" id="{{ letter }}">{{ letter }}</h4>
