--- a/app/Resources/views/default/sources.html.twig
+++ b/app/Resources/views/default/sources.html.twig
@@ -2,10 +2,10 @@
 
 {% block body %}
     <div class="container">
-        <ol>
+        <ol class="source-list">
             {% for source in sources %}
-            <li value="{{ source.id }}">
-                <p>{% include "include/source.html.twig" %}</p>
+            <li>
+                {% include "include/source.html.twig" %}
             </li>
             {% endfor %}
         </ol>
